--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
             <p id="message"></p> 
         </div>
     </form>
-    <script src="script.js"></script>
+    <script src="script.js"></script> //don't forget to load in github
 </body>
 </html>
