--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
     <form>
         <div>
         <label for="Number1">Number 1:</label>
-        <input type="number" id="Number 1">
+        <input type="number" name="number 1" id="Number 1">
         </div>
         <div>
         <label for="Number2">Number 2:</label>
-        <input type="number" id="Number 2">
+        <input type="number" name="number 1" id="Number 2">
         </div><br>
         <div>
             <button type="button" onclick="myFunction()">Submit</button>
             <p id="message"></p> 
         </div>
     </form>
-    <script src="script.js"></script> //don't forget to load in github
+    <script src="script.js"></script>
 </body>
 </html>
