--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <input type="number" name="number 1" id="Number 2">
         </div><br>
         <div>
-            <button type="button" onclick="myFunction()">Submit</button>
+            <button type="button" onclick="myFunction(); printPrime()">Submit</button>
             <p id="message"></p> 
         </div>
     </form>
